--- a/doc/src/DBProfile.xsl.docbook
+++ b/doc/src/DBProfile.xsl.docbook
@@ -13,13 +13,16 @@
          xml:id="pacbook.db.profile">
 	<title>DBProfile</title>
 	<refentry>
+		<refmeta>
+			<refentrytitle>DBProfile</refentrytitle>
+		</refmeta>
 		<refnamediv>
 			<refname>DBProfile.xsl</refname>
 			<refpurpose>Enables you to include or exclude parts of a document conditionally based on the document’s ID.</refpurpose>
 		</refnamediv>
 		<refsynopsisdiv>
 			<title>Parameters</title>
-			<para>All of the DocBook XSL stylesheet profiling parameters, except for <emphasis role="strong">profile.condition</emphasis> — see below.</para>
+			<para>All of the DocBook XSL stylesheet profiling parameters, except for <parameter>profile.condition</parameter> — see below.</para>
 		</refsynopsisdiv>
 		<refsect1>
 			<title>Input</title>
@@ -31,16 +34,16 @@
 		</refsect1>
 		<refsect1>
 			<title>Description</title>
-			<para>This stylesheet is a custom layer which imports the <literal>profile.xsl</literal> stylesheet from the DocBook XSL stylesheets.</para>
-			<para>For quicker processing and to save network bandwith, you should set up your XML catalog so that <uri>http://docbook.sourceforge.net/release/xsl-ns/current/profiling/profile.xsl</uri> is redirected to your local copy of <literal>profile.xsl</literal>.</para>
-			<para>This stylesheet takes the <literal>xml:id</literal> attribute from the root element in the document and passes that to <literal>profile.xsl</literal> as the value of the <literal>profile.condition</literal> parameter. The result of this is that any elements in the document which have the <literal>condition</literal> attribute set to the document’s XML ID are included in the output; any which have the <literal>condition</literal> attribute set to something else are excluded.</para>
+			<para>This stylesheet is a custom layer which imports the <filename>profile.xsl</filename> stylesheet from the DocBook XSL stylesheets.</para>
+			<para>For quicker processing and to save network bandwith, you should set up your XML catalog so that <uri>http://docbook.sourceforge.net/release/xsl-ns/current/profiling/profile.xsl</uri> is redirected to your local copy of <filename>profile.xsl</filename>.</para>
+			<para>This stylesheet takes the <tag class="attribute">xml:id</tag> attribute from the root element in the document and passes that to <filename>profile.xsl</filename> as the value of the <parameter>profile.condition</parameter> parameter. The result of this is that any elements in the document which have the <tag class="attribute">condition</tag> attribute set to the document’s XML ID are included in the output; any which have the <tag class="attribute">condition</tag> attribute set to something else are excluded.</para>
 			<para>This enables you to specify that certain parts of a subdocument should be omitted and certain parts kept when the subdocument is transcluded into a particular master document, based solely on that master document’s ID.</para>
-			<para>If necessary, you can supply a fake ID value to the <literal>profile.xsl</literal> stylesheet by adding a <literal>condition</literal> attribute to the root element of the master document. The stylesheet will take this as the value of the <literal>profile.condition</literal> parameter in preference to the root <literal>xml:id</literal> attribute.</para>
+			<para>If necessary, you can supply a fake ID value to the <filename>profile.xsl</filename> stylesheet by adding a <tag class="attribute">condition</tag> attribute to the root element of the master document. The stylesheet will take this as the value of the <parameter>profile.condition</parameter> parameter in preference to the root <tag class="attribute">xml:id</tag> attribute.</para>
 			<para>It is recommended to perform conditional profiling as a separate step when using PACBook. For example, you should process parametrised transclusion <emphasis>before</emphasis> conditional profiling, and you should process dynamic links, simple lists and syntactic processing <emphasis>after</emphasis> conditional profiling.</para>
 		</refsect1>
 		<refsect1>
 			<title>Roadmap</title>
-			<para>Add support for <literal>its:localeFilterList</literal> and <literal>its:localeFilterType</literal> attributes.</para>
+			<para>Add support for <tag class="attribute">its:localeFilterList</tag> and <tag class="attribute">its:localeFilterType</tag> attributes.</para>
 		</refsect1>
 	</refentry>
 </article>
