--- a/doc/src/DBGloss.xsl.docbook
+++ b/doc/src/DBGloss.xsl.docbook
@@ -13,6 +13,9 @@
          xml:id="pacbook.db.gloss">
 	<title>DBGloss</title>
 	<refentry>
+		<refmeta>
+			<refentrytitle>DBGloss</refentrytitle>
+		</refmeta>
 		<refnamediv>
 			<refname>DBGloss.xsl</refname>
 			<refpurpose>Builds glossaries automatically and adds XLink titles to glossary terms in the document.</refpurpose>
@@ -38,7 +41,7 @@
 		</refsect1>
 		<refsect1>
 			<title>Description</title>
-			<para>The stylesheet recurses through the document and copies each element. If any element is a <tag class="element">glossary</tag> with the <literal>role='collection'</literal> attribute, the stylesheet checks every <tag class="element">glossentry</tag> element to see if it is referenced by a <tag class="element">glossterm</tag> element in the document. If it is, the <tag class="element">glossentry</tag> is written to the output document.</para>
+			<para>The stylesheet recurses through the document and copies each element. If any element is a <tag class="element">glossary</tag> with the <tag class="attribute">role='collection'</tag> attribute, the stylesheet checks every <tag class="element">glossentry</tag> element to see if it is referenced by a <tag class="element">glossterm</tag> element in the document. If it is, the <tag class="element">glossentry</tag> is written to the output document.</para>
 			<para>The functionality of this stylesheet is based on the glossary collection function in the DocBook XSL stylesheets, with the following differences:</para>
 			<orderedlist numeration="arabic">
 				<listitem>
@@ -56,12 +59,9 @@
                           xpath(//db:glossary/node())"/>
 </glossary>
 			]]></programlisting>
-			<para>When following <tag class="element">glosssee</tag> and <tag class="element">glossseealso</tag> elements, there is a risk that the stylesheet will get trapped in circular references. To avoid this, the stylesheet will only recurse through 8 <tag class="element">glosssee</tag> or <tag class="element">glossseealso</tag> links. You can change the recursion depth by passing the <literal>maxRecurseDepth</literal>
-				parameter to the stylesheet.</para>
-			<para>In addition to this, the stylesheet also adds an <literal>xl:title</literal> attribute to every <tag class="element">glossterm</tag> element in the document. This contains the text of the referenced glossary definition. As a result, if you use the DocBook XSL stylesheets to transform the document into a web page, web site or compiled HTML help file, users will be able see a preview of a glossary definition by hovering the mouse pointer on the glossary term.</para>
-			<para>To use this stylesheet, <tag class="element">glossentry</tag>
-				elements must have an <literal>xml:id</literal> attribute and <tag class="element">glossterm</tag> elements must reference them via their <literal>linkend</literal> or <literal>xl:href</literal>
-				attributes.</para>
+			<para>When following <tag class="element">glosssee</tag> and <tag class="element">glossseealso</tag> elements, there is a risk that the stylesheet will get trapped in circular references. To avoid this, the stylesheet will only recurse through 8 <tag class="element">glosssee</tag> or <tag class="element">glossseealso</tag> links. You can change the recursion depth by passing the <parameter>maxRecurseDepth</parameter> parameter to the stylesheet.</para>
+			<para>In addition to this, the stylesheet also adds an <tag class="attribute">xl:title</tag> attribute to every <tag class="element">glossterm</tag> element in the document. This contains the text of the referenced glossary definition. As a result, if you use the DocBook XSL stylesheets to transform the document into a web page, web site or compiled HTML help file, users will be able see a preview of a glossary definition by hovering the mouse pointer on the glossary term.</para>
+			<para>To use this stylesheet, <tag class="element">glossentry</tag> elements must have an <tag class="attribute">xml:id</tag> attribute and <tag class="element">glossterm</tag> elements must reference them via their <tag class="attribute">linkend</tag> or <tag class="attribute">xl:href</tag> attributes.</para>
 		</refsect1>
 	</refentry>
 </article>
