--- a/doc/src/LingHead.xsl.docbook
+++ b/doc/src/LingHead.xsl.docbook
@@ -10,124 +10,48 @@
          version="5.0-variant PACBook"
          its:version="2.0"
          xml:lang="en-GB"
-         xml:id="ID">
-	<title>DocTools</title>
+         xml:id="pacbook.ling.head">
+	<title>LingHead</title>
 	<refentry>
+		<refmeta>
+			<refentrytitle>LingHead</refentrytitle>
+		</refmeta>
 		<refnamediv>
-			<refname></refname>
-			<refpurpose></refpurpose>
+			<refname>LingHead.xsl</refname>
+			<refpurpose>Selects the required declension of head nouns in an XML document.</refpurpose>
 		</refnamediv>
 		<refsynopsisdiv>
-			<synopsis></synopsis>
+			<title>Parameters</title>
+			<para>None.</para>
 		</refsynopsisdiv>
-<para>
-  Selects the required declension of head nouns in an XML document.
-</para>
-<sect1 id="parameters">
-  <title>Parameters</title>
-  <para>
-    None.
-  </para>
-</sect1>
-<sect1 id="input">
-  <title>Input</title>
-  <para>
-    An XML document. You must mark up the source document with
-    linguistic attributes describing the syntactic case and / or
-    definiteness required for each head noun in the document.
-  </para>
-</sect1>
-<sect1 id="output">
-  <title>Output</title>
-  <para>
-    An XML document, identical to the input except that head nouns are
-    declined for syntactic case and / or definiteness.
-  </para>
-</sect1>
-<sect1 id="description">
-  <title>Description</title>
-  <para>
-    The stylesheet recurses through the document and copies each
-    element. If any element is marked as a head noun, the stylesheet
-    selects the correct declension based on the syntactic case and
-    definiteness specified by the nearest ancestor element.
-  </para>
-  <para>
-    This is useful when you need to transclude a term into a sentence
-    and want to select the correct form of the term, depending on the
-    case and / or definiteness required in the target sentence.
-  </para>
-  <para>
-    When you define a noun for transclusion, you must include in the
-    transcluded text all the possible forms of the head noun in the
-    current language. Each form must be wrapped in a suitable spanning
-    element, e.g. <literal>&lt;phrase&gt;</literal> in DocBook,
-    <literal>&lt;ph&gt;</literal> in DITA or
-    <literal>&lt;span&gt;</literal> in HTML. Each form should have the
-    <literal>ling:type='head'</literal> to indicate that it is a head
-    noun, and should also have <literal>ling:case</literal> and
-    <literal>ling:class</literal> attributes to specify the case and /
-    or definiteness of each form, depending on the language.
-  </para>
-  <para>
-    At each location where the term is to be transcluded, you must wrap
-    the transcluded term and any preceding or following dependent words,
-    e.g. articles or adjectives, in another spanning element. This
-    spanning element should be marked up with the case and / or
-    definiteness you require for this instance of the term, depending on
-    the current language.
-  </para>
-  <itemizedlist>
-    <listitem>
-      <para>
-        The <literal>ling:case</literal> attribute may have any string
-        value, as long as it matches a value used to mark case in the
-        PACBook syntactic dictionary for the current language. In the
-        PACBook syntactic dictionaries, the values used are
-        <literal>nom</literal> for nominative, <literal>acc</literal>
-        for accusative, <literal>gen</literal> for genitive and
-        <literal>dat</literal> for dative. The <literal>gen</literal>
-        case is used to mark the possessive in English. If the
-        stylesheet cannot determine the required case for a transcluded
-        term, it assumes the nominative form is required.
-      </para>
-    </listitem>
-    <listitem>
-      <para>
-        The <literal>ling:class</literal> attribute may have any string
-        value, as long as it matches a value used to mark inflectional
-        class in the PACBook syntactic dictionary for the current
-        language. In the PACBook syntactic dictionaries, the values used
-        in German are <literal>strong</literal>, <literal>weak</literal>
-        and <literal>mixed</literal>; the values used in Dutch, Swedish
-        and Norwegian are <literal>ind</literal> for indefinite,
-        <literal>def</literal> for definite. If the stylesheet cannot
-        determine the required inflectional class for a transcluded
-        term, it assumes the indefinite form is required.
-      </para>
-    </listitem>
-  </itemizedlist>
-  <para>
-    The namespace URI for the linguistic attributes is
-    <literal>http://stanleysecurity.github.io/PACBook/ns/linguistics</literal>.
-  </para>
-  <para>
-    This stylesheet should be applied after the head nouns have all been
-    transcluded into place. When the stylesheet finds a head element, it
-    checks whether the element’s definiteness and / or case match the
-    definiteness and / or case of the nearest ancestor element. If they
-    match, the head element is copied to the output; if not, the head
-    element and all its descendent elements are deleted.
-  </para>
-</sect1>
-<sect1 id="roadmap">
-  <title>Roadmap</title>
-  <para>
-    In DocBook files, this stylesheet matches
-    <literal>&lt;token&gt;</literal> elements as well as elements with
-    the <literal>ling:type='head'</literal> attribute. This may be
-    removed in a future release.
-  </para>
-</sect1>
+		<refsect1>
+			<title>Input</title>
+			<para>An XML document. You must mark up the source document with linguistic attributes describing the syntactic case and / or definiteness required for each head noun in the document.</para>
+		</refsect1>
+		<refsect1>
+			<title>Output</title>
+			<para>An XML document, identical to the input except that head nouns are declined for syntactic case and / or definiteness.</para>
+		</refsect1>
+		<refsect1>
+			<title>Description</title>
+			<para>The stylesheet recurses through the document and copies each element. If any element is marked as a head noun, the stylesheet selects the correct declension based on the syntactic case and definiteness specified by the nearest ancestor element.</para>
+			<para>This is useful when you need to transclude a term into a sentence and want to select the correct form of the term, depending on the case and / or definiteness required in the target sentence.</para>
+			<para>When you define a noun for transclusion, you must include in the transcluded text all the possible forms of the head noun in the current language. Each form must be wrapped in a suitable spanning element, e.g. <tag class="element">phrase</tag> in DocBook, <tag class="element">ph</tag> in DITA or <tag class="element">span</tag> in HTML. Each form should have the <tag class="attribute">ling:type='head'</tag> attribute to indicate that it is a head noun, and should also have <tag class="attribute">ling:case</tag> and <tag class="attribute">ling:class</tag> attributes to specify the case and / or definiteness of each form, depending on the language.</para>
+			<para>At each location where the term is to be transcluded, you must wrap the transcluded term and any preceding or following dependent words, e.g. articles or adjectives, in another spanning element. This spanning element should be marked up with the case and / or definiteness you require for this instance of the term, depending on the current language.</para>
+			<itemizedlist>
+				<listitem>
+					<para>The <tag class="attribute">ling:case</tag> attribute may have any string value, as long as it matches a value used to mark case in the PACBook syntactic dictionary for the current language. In the PACBook syntactic dictionaries, the values used are <tag class="attvalue">nom</tag> for nominative, <tag class="attvalue">acc</tag> for accusative, <tag class="attvalue">gen</tag> for genitive and <tag class="attvalue">dat</tag> for dative. The <tag class="attvalue">gen</tag> case is used to mark the possessive in English. If the stylesheet cannot determine the required case for a transcluded term, it assumes the nominative form is required.</para>
+				</listitem>
+				<listitem>
+					<para>The <tag class="attribute">ling:class</tag> attribute may have any string value, as long as it matches a value used to mark inflectional class in the PACBook syntactic dictionary for the current language. In the PACBook syntactic dictionaries, the values used in German are <tag class="attvalue">strong</tag>, <tag class="attvalue">weak</tag> and <tag class="attvalue">mixed</tag>; the values used in Dutch, Swedish and Norwegian are <tag class="attvalue">ind</tag> for indefinite, <tag class="attvalue">def</tag> for definite. If the stylesheet cannot determine the required inflectional class for a transcluded term, it assumes the indefinite form is required.</para>
+				</listitem>
+			</itemizedlist>
+			<para>The namespace URI for the linguistic attributes is <uri>http://stanleysecurity.github.io/PACBook/ns/linguistics</uri>.</para>
+			<para>This stylesheet should be applied after the head nouns have all been transcluded into place. When the stylesheet finds a head element, it checks whether the element’s definiteness and / or case match the definiteness and / or case of the nearest ancestor element. If they match, the head element is copied to the output; if not, the head element and all its descendent elements are deleted.</para>
+		</refsect1>
+		<refsect1>
+			<title>Roadmap</title>
+			<para>In DocBook files, this stylesheet matches <tag class="element">token</tag> elements as well as elements with the <tag class="attribute">ling:type='head'</tag> attribute. This may be removed in a future release.</para>
+		</refsect1>
 	</refentry>
 </article>
