--- a/doc/src/TransLinks.xsl.docbook
+++ b/doc/src/TransLinks.xsl.docbook
@@ -10,158 +10,65 @@
          version="5.0-variant PACBook"
          its:version="2.0"
          xml:lang="en-GB"
-         xml:id="ID">
-	<title>DocTools</title>
+         xml:id="pacbook.trans.links">
+	<title>TransLinks</title>
 	<refentry>
+		<refmeta>
+			<refentrytitle>TransLinks</refentrytitle>
+		</refmeta>
 		<refnamediv>
-			<refname></refname>
-			<refpurpose></refpurpose>
+			<refname>TransLinks.xsl</refname>
+			<refpurpose>Enables fine-grained fixup of simple link attributes after transclusion.</refpurpose>
 		</refnamediv>
 		<refsynopsisdiv>
-			<synopsis></synopsis>
+			<title>Parameters</title>
+			<synopsis>[linkRole]</synopsis>
+			<itemizedlist>
+				<listitem>
+					<para><parameter>linkRole</parameter> (URI) — A URI which identifies the link fixup XLink role. Default is <uri>http://stanleysecurity.github.io/PACBook/role/link</uri>.</para>
+				</listitem>
+			</itemizedlist>
 		</refsynopsisdiv>
-<para>
-  Enables fine-grained fixup of simple link attributes after
-  transclusion.
-</para>
-<sect1 id="parameters">
-  <title>Parameters</title>
-  <para>
-    <literal>[linkRole]</literal>
-  </para>
-  <itemizedlist>
-    <listitem>
-      <para>
-        <emphasis role="strong">linkRole</emphasis> (URI) — A URI which
-        identifies the link fixup XLink role. Default is
-        http://stanleysecurity.github.io/PACBook/role/link.
-      </para>
-    </listitem>
-  </itemizedlist>
-</sect1>
-<sect1 id="input">
-  <title>Input</title>
-  <para>
-    An XML document containing extended links to fix up simple link
-    attributes as described below.
-  </para>
-</sect1>
-<sect1 id="output">
-  <title>Output</title>
-  <para>
-    An XML document, identical to the input except that simple link
-    attributes are fixed up.
-  </para>
-</sect1>
-<sect1 id="description">
-  <title>Description</title>
-  <para>
-    This stylesheet is useful in two scenarios:
-  </para>
-  <orderedlist numeration="arabic">
-    <listitem>
-      <para>
-        If you have a subdocument which contains XML IDs and which must
-        be included in an assembly file or master document in two or
-        more places. In order to avoid validation errors, each ID must
-        be unique. The process of making duplicate IDs unique is called
-        ID fixup. After you have fixed up IDs, you may also need to fix
-        up <emphasis>inbound</emphasis> cross references or links that
-        point to those IDs.
-      </para>
-    </listitem>
-    <listitem>
-      <para>
-        If you want to include a subdocument containing
-        <emphasis>outbound</emphasis> cross references or links to IDs
-        in other subdocuments which are not present in the current
-        assembly file or master document. You can fix up these links to
-        redirect them to other IDs which are known to be present.
-      </para>
-    </listitem>
-  </orderedlist>
-  <para>
-    This stylesheet enables you to specify by hand how links should be
-    fixed up, using XLink.
-  </para>
-  <para>
-    In the assembly file or master document, at the start of each
-    section where you want to fix up links or cross references, you must
-    add an extended link element with the <literal>xl:role</literal>
-    attribute set to the specified link fixup role URI. For each link or
-    cross-reference that needs fixing up, the extended link should
-    contain:
-  </para>
-  <orderedlist numeration="arabic">
-    <listitem>
-      <para>
-        A locator element with an <literal>xl:label</literal> attribute
-        unique within the extended link, whose
-        <literal>xl:href</literal> attribute is set to a link location
-        that you want to fix up.
-      </para>
-    </listitem>
-    <listitem>
-      <para>
-        A locator element with an <literal>xl:label</literal> attribute
-        unique within the extended link, whose
-        <literal>xl:href</literal> attribute is set to the link location
-        that you want the link or cross reference to use.
-      </para>
-    </listitem>
-    <listitem>
-      <para>
-        An arc element whose <literal>xl:from</literal> attribute is set
-        to the <literal>xl:label</literal> attribute of the start
-        locator and whose <literal>xl:to</literal> attribute is set to
-        the <literal>xl:label</literal> attribute of the fixup locator.
-      </para>
-    </listitem>
-  </orderedlist>
-  <para>
-    When run, the stylesheet recurses through the document and copies
-    each element. If any element has an <literal>xl:href</literal>
-    attribute, the stylesheet looks for the nearest ancestor element
-    which contains an extended link whose <literal>xl:role</literal>
-    attribute is set to the specified link fixup role URI
-    <emphasis>and</emphasis> which contains a locator element whose
-    <literal>xl:href</literal> attribute is the same as the current
-    <literal>xl:href</literal> attribute. If it finds a matching
-    locator, the stylesheet follows the arc to the target locator and
-    replaces the value of the current <literal>xl:href</literal>
-    attribute with the value indicated by the target locator’s
-    <literal>xl:href</literal> attribute.
-  </para>
-  <para>
-    For DocBook documents, this stylesheet also fixes up
-    <literal>linkend</literal> attributes and the content of
-    <literal>arearefs</literal> attributes in the same way.
-  </para>
-  <para>
-    You should run this stylesheet after transclusion. If any of your
-    translation strings contain simple links, you may need to run this
-    stylesheet after translation instead.
-  </para>
-  <para>
-    For fixing up IDs after transclusion, see
-    <ulink url="TransID.xsl">TransID.xsl</ulink>.
-  </para>
-</sect1>
-<sect1 id="roadmap">
-  <title>Roadmap</title>
-  <para>
-    At present this stylesheet requires that the extended links,
-    locators and arcs are DocBook
-    <literal>&lt;extendedlink&gt;</literal>,
-    <literal>&lt;locator&gt;</literal> and
-    <literal>&lt;arc&gt;</literal> elements, meaning that the stylesheet
-    only works with DocBook. In future releases, this stylesheet will be
-    updated to work with any elements with attributes
-    <literal>xl:type='extended'</literal>,
-    <literal>xl:type='locator'</literal> or
-    <literal>xl:type='arc'</literal>. This will make the stylesheets
-    work with any XLink-compliant XML schema, including DocBook 5.1.
-  </para>
-</sect1>
+		<refsect1>
+			<title>Input</title>
+			<para>An XML document containing extended links to fix up simple link attributes as described below.</para>
+		</refsect1>
+		<refsect1>
+			<title>Output</title>
+			<para>An XML document, identical to the input except that simple link attributes are fixed up.</para>
+		</refsect1>
+		<refsect1>
+			<title>Description</title>
+			<para>This stylesheet is useful in two scenarios:</para>
+			<orderedlist numeration="arabic">
+				<listitem>
+					<para>If you have a subdocument which contains XML IDs and which must be included in an assembly file or master document in two or more places. In order to avoid validation errors, each ID must be unique. The process of making duplicate IDs unique is called ID fixup. After you have fixed up IDs, you may also need to fix up <emphasis>inbound</emphasis> cross references or links that point to those IDs.</para>
+				</listitem>
+				<listitem>
+					<para>If you want to include a subdocument containing <emphasis>outbound</emphasis> cross references or links to IDs in other subdocuments which are not present in the current assembly file or master document. You can fix up these links to redirect them to other IDs which are known to be present.</para>
+				</listitem>
+			</orderedlist>
+			<para>This stylesheet enables you to specify by hand how links should be fixed up, using XLink.</para>
+			<para>In the assembly file or master document, at the start of each section where you want to fix up links or cross references, you must add an extended link element with the <tag class="attribute">xl:role</tag> attribute set to the specified link fixup role URI. For each link or cross-reference that needs fixing up, the extended link should contain:</para>
+			<orderedlist numeration="arabic">
+				<listitem>
+					<para>A locator element with an <tag class="attribute">xl:label</tag> attribute unique within the extended link, whose <tag class="attribute">xl:href</tag> attribute is set to a link location that you want to fix up.</para>
+				</listitem>
+				<listitem>
+					<para>A locator element with an <tag class="attribute">xl:label</tag> attribute unique within the extended link, whose <tag class="attribute">xl:href</tag> attribute is set to the link location that you want the link or cross reference to use.</para>
+				</listitem>
+				<listitem>
+					<para>An arc element whose <tag class="attribute">xl:from</tag> attribute is set to the <tag class="attribute">xl:label</tag> attribute of the start locator and whose <tag class="attribute">xl:to</tag> attribute is set to the <tag class="attribute">xl:label</tag> attribute of the fixup locator.</para>
+				</listitem>
+			</orderedlist>
+			<para>When run, the stylesheet recurses through the document and copies each element. If any element has an <tag class="attribute">xl:href</tag> attribute, the stylesheet looks for the nearest ancestor element which contains an extended link whose <tag class="attribute">xl:role</tag> attribute is set to the specified link fixup role URI <emphasis>and</emphasis> which contains a locator element whose <tag class="attribute">xl:href</tag> attribute is the same as the current <tag class="attribute">xl:href</tag> attribute. If it finds a matching locator, the stylesheet follows the arc to the target locator and replaces the value of the current <tag class="attribute">xl:href</tag> attribute with the value indicated by the target locator’s <tag class="attribute">xl:href</tag> attribute.</para>
+			<para>For DocBook documents, this stylesheet also fixes up <tag class="attribute">linkend</tag> attributes and the content of <tag class="attribute">arearefs</tag> attributes in the same way.</para>
+			<para>You should run this stylesheet after transclusion. If any of your translation strings contain simple links, you may need to run this stylesheet after translation instead.</para>
+			<para>For fixing up IDs after transclusion, see <link xl:href="#TransID.xsl">TransID.xsl</link>.</para>
+		</refsect1>
+		<refsect1>
+			<title>Roadmap</title>
+			<para>At present this stylesheet requires that the extended links, locators and arcs are DocBook <tag class="element">extendedlink</tag>, <tag class="element">locator</tag> and <tag class="element">arc</tag> elements, meaning that the stylesheet only works with DocBook. In future releases, this stylesheet will be updated to work with any elements with attributes <tag class="attribute">xl:type='extended'</tag>, <tag class="attribute">xl:type='locator'</tag> or <tag class="attribute">xl:type='arc'</tag>. This will make the stylesheets work with any XLink-compliant XML schema, including DocBook 5.1.</para>
+		</refsect1>
 	</refentry>
 </article>
