--- a/doc/src/XlateConvert.xsl.docbook
+++ b/doc/src/XlateConvert.xsl.docbook
@@ -10,73 +10,40 @@
          version="5.0-variant PACBook"
          its:version="2.0"
          xml:lang="en-GB"
-         xml:id="ID">
-	<title>DocTools</title>
+         xml:id="pacbook.xlate.convert">
+	<title>XlateConvert</title>
 	<refentry>
+		<refmeta>
+			<refentrytitle>XlateConvert</refentrytitle>
+		</refmeta>
 		<refnamediv>
-			<refname></refname>
-			<refpurpose></refpurpose>
+			<refname>XlateConvert.xsl</refname>
+			<refpurpose>Translates any XML document into the specified language.</refpurpose>
 		</refnamediv>
 		<refsynopsisdiv>
-			<synopsis></synopsis>
+			<title>Parameters</title>
+			<synopsis>Language</synopsis>
+			<para><parameter>Language</parameter> (string) — ISO language code</para>
 		</refsynopsisdiv>
-<para>
-  Translates any XML document into the specified language.
-</para>
-<sect1 id="parameters">
-  <title>Parameters</title>
-  <para>
-    <literal>Language</literal>
-  </para>
-  <para>
-    <emphasis role="strong">Language</emphasis> (string) — ISO language
-    code
-  </para>
-</sect1>
-<sect1 id="input">
-  <title>Input</title>
-  <para>
-    An XML document. You must mark up the source document with:
-  </para>
-  <orderedlist numeration="arabic">
-    <listitem>
-      <para>
-        <ulink url="RDF-Translations">Translation metadata</ulink>,
-        showing the location of the
-        <ulink url="http://docs.oasis-open.org/xliff/v1.2/os/xliff-core.html">XLIFF</ulink>
-        files which contain the translations of the document.
-      </para>
-    </listitem>
-    <listitem>
-      <para>
-        The <literal>xlf:id</literal> attributes which uniquely identify
-        each translation string.
-      </para>
-    </listitem>
-  </orderedlist>
-</sect1>
-<sect1 id="output">
-  <title>Output</title>
-  <para>
-    A translated XML document.
-  </para>
-</sect1>
-<sect1 id="description">
-  <title>Description</title>
-  <para>
-    The stylesheet reconstructs the structure of the source file. For
-    each translatable string, it looks for the
-    <ulink url="http://docs.oasis-open.org/xliff/v1.2/os/xliff-core.html">XLIFF</ulink>
-    file that corresponds to the specified output language. If the
-    <ulink url="http://docs.oasis-open.org/xliff/v1.2/os/xliff-core.html">XLIFF</ulink>
-    file is found, it searches for the translated string and includes it
-    in the output document. If the
-    <ulink url="http://docs.oasis-open.org/xliff/v1.2/os/xliff-core.html">XLIFF</ulink>
-    file or the translated string are not found, or if the translatable
-    string is marked with the
-    <literal>its:translate=&quot;no&quot;</literal> attribute, the
-    source string is copied to the output document.
-  </para>
-</sect1>
+		<refsect1>
+			<title>Input</title>
+			<para>An XML document. You must mark up the source document with:</para>
+			<orderedlist numeration="arabic">
+				<listitem>
+					<para><link xl:href="#RDF-Translations">Translation metadata</link>, showing the location of the <link xl:href="http://docs.oasis-open.org/xliff/v1.2/os/xliff-core.html">XLIFF</link> files which contain the translations of the document.</para>
+				</listitem>
+				<listitem>
+					<para>The <tag class="attribute">xlf:id</tag> attributes which uniquely identify each translation string.</para>
+				</listitem>
+			</orderedlist>
+		</refsect1>
+		<refsect1>
+			<title>Output</title>
+			<para>A translated XML document.</para>
+		</refsect1>
+		<refsect1>
+			<title>Description</title>
+			<para>The stylesheet reconstructs the structure of the source file. For each translatable string, it looks for the <link xl:href="http://docs.oasis-open.org/xliff/v1.2/os/xliff-core.html">XLIFF</link> file that corresponds to the specified output language. If the <link xl:href="http://docs.oasis-open.org/xliff/v1.2/os/xliff-core.html">XLIFF</link> file is found, it searches for the translated string and includes it in the output document. If the <link xl:href="http://docs.oasis-open.org/xliff/v1.2/os/xliff-core.html">XLIFF</link> file or the translated string are not found, or if the translatable string is marked with the <tag class="attribute">its:translate='no'</tag> attribute, the source string is copied to the output document.</para>
+		</refsect1>
 	</refentry>
 </article>
