--- a/doc/src/XlateDiff.xsl.docbook
+++ b/doc/src/XlateDiff.xsl.docbook
@@ -10,148 +10,58 @@
          version="5.0-variant PACBook"
          its:version="2.0"
          xml:lang="en-GB"
-         xml:id="ID">
-	<title>DocTools</title>
+         xml:id="pacbook.xlate.diff">
+	<title>XlateDiff</title>
 	<refentry>
+		<refmeta>
+			<refentrytitle>XlateDiff</refentrytitle>
+		</refmeta>
 		<refnamediv>
-			<refname></refname>
-			<refpurpose></refpurpose>
+			<refname>XlateDiff.xsl</refname>
+			<refpurpose>Checks an XML document against an existing translation in the specified language and generates a new <link xl:href="http://docs.oasis-open.org/xliff/v1.2/os/xliff-core.html">XLIFF</link> file containing the strings which are new or changed.</refpurpose>
 		</refnamediv>
 		<refsynopsisdiv>
-			<synopsis></synopsis>
+			<title>Parameters</title>
+			<synopsis>(Language | Xliff)</synopsis>
+			<itemizedlist>
+				<listitem>
+					<para><parameter>Language</parameter> (string) — ISO language code</para>
+				</listitem>
+				<listitem>
+					<para><parameter>Xliff</parameter> (URI) — The URI of the <link xl:href="http://docs.oasis-open.org/xliff/v1.2/os/xliff-core.html">XLIFF</link> file you want to compare</para>
+				</listitem>
+			</itemizedlist>
 		</refsynopsisdiv>
-<para>
-  Checks an XML document against an existing translation in the
-  specified language and generates a new
-  <ulink url="http://docs.oasis-open.org/xliff/v1.2/os/xliff-core.html">XLIFF</ulink>
-  file containing the strings which are new or changed.
-</para>
-<sect1 id="parameters">
-  <title>Parameters</title>
-  <para>
-    <literal>(Language | Xliff)</literal>
-  </para>
-  <itemizedlist>
-    <listitem>
-      <para>
-        <emphasis role="strong">Language</emphasis> (string) — ISO
-        language code
-      </para>
-    </listitem>
-    <listitem>
-      <para>
-        <emphasis role="strong">Xliff</emphasis> (URI) — The URI of the
-        <ulink url="http://docs.oasis-open.org/xliff/v1.2/os/xliff-core.html">XLIFF</ulink>
-        file you want to compare
-      </para>
-    </listitem>
-  </itemizedlist>
-</sect1>
-<sect1 id="input">
-  <title>Input</title>
-  <para>
-    An XML document. You must mark up the source document with:
-  </para>
-  <orderedlist numeration="arabic">
-    <listitem>
-      <para>
-        The <literal>xlf:id</literal> attributes which uniquely identify
-        each translation string.
-      </para>
-    </listitem>
-    <listitem>
-      <para>
-        Optionally, <ulink url="RDF-Translations">translation
-        metadata</ulink>, showing the location of the
-        <ulink url="http://docs.oasis-open.org/xliff/v1.2/os/xliff-core.html">XLIFF</ulink>
-        files which contain the translations of the document — this is
-        only required if you are not specifying the
-        <literal>Xliff</literal> parameter explicitly.
-      </para>
-    </listitem>
-  </orderedlist>
-</sect1>
-<sect1 id="output">
-  <title>Output</title>
-  <para>
-    An
-    <ulink url="http://docs.oasis-open.org/xliff/v1.2/os/xliff-core.html">XLIFF</ulink>
-    document.
-  </para>
-</sect1>
-<sect1 id="description">
-  <title>Description</title>
-  <para>
-    The stylesheet examines the source file for translatable elements.
-    (A translatable element is one which has an
-    <literal>xlf:id</literal> attribute and does not have the
-    <literal>its:translate=&quot;no&quot;</literal> attribute.)
-  </para>
-  <para>
-    For each translatable element, the stylesheet looks for the
-    specified
-    <ulink url="http://docs.oasis-open.org/xliff/v1.2/os/xliff-core.html">XLIFF</ulink>
-    file, or if not specified, the
-    <ulink url="http://docs.oasis-open.org/xliff/v1.2/os/xliff-core.html">XLIFF</ulink>
-    file that corresponds to the specified output language, according to
-    the <ulink url="RDF-Translations">translation metadata</ulink>.
-  </para>
-  <para>
-    If the
-    <ulink url="http://docs.oasis-open.org/xliff/v1.2/os/xliff-core.html">XLIFF</ulink>
-    file is found, the stylesheet searches for the translation unit with
-    the same <literal>xlf:id</literal>, and compares its source with the
-    translatable element in the source document.
-  </para>
-  <para>
-    If the corresponding translation unit does not exist in the
-    <ulink url="http://docs.oasis-open.org/xliff/v1.2/os/xliff-core.html">XLIFF</ulink>
-    file, a new translation unit is written to the output document which
-    contains this translatable element as its source.
-  </para>
-  <para>
-    If the corresponding translation unit exists in the
-    <ulink url="http://docs.oasis-open.org/xliff/v1.2/os/xliff-core.html">XLIFF</ulink>
-    file, but its source is different from the translatable element in
-    the source document, a translation unit is written to the output
-    document which contains this translatable element as its source and
-    the target text from the original
-    <ulink url="http://docs.oasis-open.org/xliff/v1.2/os/xliff-core.html">XLIFF</ulink>
-    file as its target.
-  </para>
-  <para>
-    If the corresponding translation unit exists in the
-    <ulink url="http://docs.oasis-open.org/xliff/v1.2/os/xliff-core.html">XLIFF</ulink>
-    file, and its source is the same as the translatable element in the
-    source document, and the target is empty or marked as incomplete,
-    the translation unit is copied from the original
-    <ulink url="http://docs.oasis-open.org/xliff/v1.2/os/xliff-core.html">XLIFF</ulink>
-    file to the output document.
-  </para>
-  <para>
-    If the corresponding translation unit exists in the
-    <ulink url="http://docs.oasis-open.org/xliff/v1.2/os/xliff-core.html">XLIFF</ulink>
-    file, and its source is the same as the translatable element in the
-    source document, and the target is not empty or marked as
-    incomplete, there is no output.
-  </para>
-  <para>
-    If the
-    <ulink url="http://docs.oasis-open.org/xliff/v1.2/os/xliff-core.html">XLIFF</ulink>
-    file is not found, there is no output.
-  </para>
-  <sect2 id="note">
-    <title>Note</title>
-    <para>
-      In the output file, all <literal>&lt;trans-unit&gt;</literal>
-      elements are contained in a single, flat
-      <literal>&lt;file&gt;</literal> element. Any multiple
-      <literal>&lt;file&gt;</literal> or
-      <literal>&lt;group&gt;</literal> elements from the original
-      <ulink url="http://docs.oasis-open.org/xliff/v1.2/os/xliff-core.html">XLIFF</ulink>
-      file are not copied to the output file.
-    </para>
-  </sect2>
-</sect1>
+		<refsect1>
+			<title>Input</title>
+			<para>An XML document. You must mark up the source document with:</para>
+			<orderedlist numeration="arabic">
+				<listitem>
+					<para>The <tag class="attribute">xlf:id</tag> attributes which uniquely identify each translation string.</para>
+				</listitem>
+				<listitem>
+					<para>Optionally, <link xl:href="#RDF-Translations">translation metadata</link>, showing the location of the <link xl:href="http://docs.oasis-open.org/xliff/v1.2/os/xliff-core.html">XLIFF</link> files which contain the translations of the document — this is only required if you are not specifying the <parameter>Xliff</parameter> parameter explicitly.</para>
+				</listitem>
+			</orderedlist>
+		</refsect1>
+		<refsect1>
+			<title>Output</title>
+			<para>An <link xl:href="http://docs.oasis-open.org/xliff/v1.2/os/xliff-core.html">XLIFF</link> document.</para>
+		</refsect1>
+		<refsect1>
+			<title>Description</title>
+			<para>The stylesheet examines the source file for translatable elements. (A translatable element is one which has an <tag class="attribute">xlf:id</tag> attribute and does not have the <tag class="attribute">its:translate='no'</tag> attribute.)</para>
+			<para>For each translatable element, the stylesheet looks for the specified <link xl:href="http://docs.oasis-open.org/xliff/v1.2/os/xliff-core.html">XLIFF</link> file, or if not specified, the <link xl:href="http://docs.oasis-open.org/xliff/v1.2/os/xliff-core.html">XLIFF</link> file that corresponds to the specified output language, according to the <link xl:href="#RDF-Translations">translation metadata</link>.</para>
+			<para>If the <link xl:href="http://docs.oasis-open.org/xliff/v1.2/os/xliff-core.html">XLIFF</link> file is found, the stylesheet searches for the translation unit with the same <tag class="attribute">xlf:id</tag>, and compares its source with the translatable element in the source document.</para>
+			<para>If the corresponding translation unit does not exist in the <link xl:href="http://docs.oasis-open.org/xliff/v1.2/os/xliff-core.html">XLIFF</link> file, a new translation unit is written to the output document which contains this translatable element as its source.</para>
+			<para>If the corresponding translation unit exists in the <link xl:href="http://docs.oasis-open.org/xliff/v1.2/os/xliff-core.html">XLIFF</link> file, but its source is different from the translatable element in the source document, a translation unit is written to the output document which contains this translatable element as its source and the target text from the original <link xl:href="http://docs.oasis-open.org/xliff/v1.2/os/xliff-core.html">XLIFF</link> file as its target.</para>
+			<para>If the corresponding translation unit exists in the <link xl:href="http://docs.oasis-open.org/xliff/v1.2/os/xliff-core.html">XLIFF</link> file, and its source is the same as the translatable element in the source document, and the target is empty or marked as incomplete, the translation unit is copied from the original <link xl:href="http://docs.oasis-open.org/xliff/v1.2/os/xliff-core.html">XLIFF</link> file to the output document.</para>
+			<para>If the corresponding translation unit exists in the <link xl:href="http://docs.oasis-open.org/xliff/v1.2/os/xliff-core.html">XLIFF</link> file, and its source is the same as the translatable element in the source document, and the target is not empty or marked as incomplete, there is no output.</para>
+			<para>If the <link xl:href="http://docs.oasis-open.org/xliff/v1.2/os/xliff-core.html">XLIFF</link> file is not found, there is no output.</para>
+			<refsect2>
+				<title>Note</title>
+				<para>In the output file, all <tag class="element">trans-unit</tag> elements are contained in a single, flat <tag class="element">file</tag> element. Any multiple <tag class="element">file</tag> or <tag class="element">group</tag> elements from the original <link xl:href="http://docs.oasis-open.org/xliff/v1.2/os/xliff-core.html">XLIFF</link> file are not copied to the output file.</para>
+			</refsect2>
+		</refsect1>
 	</refentry>
 </article>
