--- a/doc/src/XlateExtract.xsl.docbook
+++ b/doc/src/XlateExtract.xsl.docbook
@@ -10,81 +10,44 @@
          version="5.0-variant PACBook"
          its:version="2.0"
          xml:lang="en-GB"
-         xml:id="ID">
-	<title>DocTools</title>
+         xml:id="pacbook.xlate.extract">
+	<title>XlateExtract</title>
 	<refentry>
+		<refmeta>
+			<refentrytitle>XlateExtract</refentrytitle>
+		</refmeta>
 		<refnamediv>
-			<refname></refname>
-			<refpurpose></refpurpose>
+			<refname>XlateExtract.xsl</refname>
+			<refpurpose>Copies translatable elements from an XML document to a new <link xl:href="http://docs.oasis-open.org/xliff/v1.2/os/xliff-core.html">XLIFF</link> file.</refpurpose>
 		</refnamediv>
 		<refsynopsisdiv>
-			<synopsis></synopsis>
+			<title>Parameters</title>
+			<synopsis>Source</synopsis>
+			<itemizedlist>
+				<listitem>
+					<para><parameter>Source</parameter> (string) — the name of the source document</para>
+				</listitem>
+			</itemizedlist>
 		</refsynopsisdiv>
-<para>
-  Copies translatable elements from an XML document to a new
-  <ulink url="http://docs.oasis-open.org/xliff/v1.2/os/xliff-core.html">XLIFF</ulink>
-  file.
-</para>
-<sect1 id="parameters">
-  <title>Parameters</title>
-  <para>
-    <literal>Source</literal>
-  </para>
-  <itemizedlist>
-    <listitem>
-      <para>
-        <emphasis role="strong">Source</emphasis> (string) — the name of
-        the source document
-      </para>
-    </listitem>
-  </itemizedlist>
-</sect1>
-<sect1 id="input">
-  <title>Input</title>
-  <para>
-    An XML document. You must mark up the source document with:
-  </para>
-  <orderedlist numeration="arabic">
-    <listitem>
-      <para>
-        The <literal>xlf:id</literal> attributes which uniquely identify
-        each translation string.
-      </para>
-    </listitem>
-  </orderedlist>
-</sect1>
-<sect1 id="output">
-  <title>Output</title>
-  <para>
-    An
-    <ulink url="http://docs.oasis-open.org/xliff/v1.2/os/xliff-core.html">XLIFF</ulink>
-    document.
-  </para>
-</sect1>
-<sect1 id="description">
-  <title>Description</title>
-  <para>
-    The stylesheet examines the source file for translatable elements.
-    (A translatable element is one which has an
-    <literal>xlf:id</literal> attribute and does not have the
-    <literal>its:translate=&quot;no&quot;</literal> attribute.)
-  </para>
-  <para>
-    For each translatable element, a new translation unit is written to
-    the output document which contains this translatable element as its
-    source.
-  </para>
-  <para>
-    For DocBook files, a header is added containing some bibliographical
-    metadata from the source file —
-    <literal>db:biblioid[@class='pubsnumber']</literal>,
-    <literal>db:edition</literal> and <literal>db:releaseinfo</literal>.
-  </para>
-  <para>
-    Any inline markup within the translatable element is escaped. This
-    enables you to examine the inline markup in a translation editor
-    such as Virtaal.
-  </para>
-</sect1>
+		<refsect1>
+			<title>Input</title>
+			<para>An XML document. You must mark up the source document with:</para>
+			<orderedlist numeration="arabic">
+				<listitem>
+					<para>The <tag class="attribute">xlf:id</tag> attributes which uniquely identify each translation string.</para>
+				</listitem>
+			</orderedlist>
+		</refsect1>
+		<refsect1>
+			<title>Output</title>
+			<para>An <link xl:href="http://docs.oasis-open.org/xliff/v1.2/os/xliff-core.html">XLIFF</link> document.</para>
+		</refsect1>
+		<refsect1>
+			<title>Description</title>
+			<para>The stylesheet examines the source file for translatable elements. (A translatable element is one which has an <tag class="attribute">xlf:id</tag> attribute and does not have the <tag class="attribute">its:translate='no'</tag> attribute.)</para>
+			<para>For each translatable element, a new translation unit is written to the output document which contains this translatable element as its source.</para>
+			<para>For DocBook files, a header is added containing some bibliographical metadata from the source file — <tag class="element">db:biblioid class='pubsnumber'</tag>, <tag class="element">db:edition</tag> and <tag class="element">db:releaseinfo</tag>.</para>
+			<para>Any inline markup within the translatable element is escaped. This enables you to examine the inline markup in a translation editor such as Virtaal.</para>
+		</refsect1>
 	</refentry>
 </article>
