--- a/doc/src/XlateMerge.xsl.docbook
+++ b/doc/src/XlateMerge.xsl.docbook
@@ -10,145 +10,59 @@
          version="5.0-variant PACBook"
          its:version="2.0"
          xml:lang="en-GB"
-         xml:id="ID">
-	<title>DocTools</title>
+         xml:id="pacbook.xlate.merge">
+	<title>XlateMerge</title>
 	<refentry>
+		<refmeta>
+			<refentrytitle>XlateMerge</refentrytitle>
+		</refmeta>
 		<refnamediv>
-			<refname></refname>
-			<refpurpose></refpurpose>
+			<refname>XlateMerge.xsl</refname>
+			<refpurpose>Checks an XML document against an existing translation and a differential translation in the specified language and generates a new <link xl:href="http://docs.oasis-open.org/xliff/v1.2/os/xliff-core.html">XLIFF</link> file merging the two translations.</refpurpose>
 		</refnamediv>
 		<refsynopsisdiv>
-			<synopsis></synopsis>
+			<title>Parameters</title>
+			<synopsis>(Language | Xliff)  Diff</synopsis>
+			<itemizedlist>
+				<listitem>
+					<para><parameter>Language</parameter> (string) — ISO language code,</para>
+				</listitem>
+				<listitem>
+					<para><parameter>Xliff</parameter> (URI) — The URI of the original <link xl:href="http://docs.oasis-open.org/xliff/v1.2/os/xliff-core.html">XLIFF</link> file</para>
+				</listitem>
+				<listitem>
+					<para><parameter>Diff</parameter> (URI) — The URI of the differential <link xl:href="http://docs.oasis-open.org/xliff/v1.2/os/xliff-core.html">XLIFF</link> file</para>
+				</listitem>
+			</itemizedlist>
 		</refsynopsisdiv>
-<para>
-  Checks an XML document against an existing translation and a
-  differential translation in the specified language and generates a new
-  <ulink url="http://docs.oasis-open.org/xliff/v1.2/os/xliff-core.html">XLIFF</ulink>
-  file merging the two translations.
-</para>
-<sect1 id="parameters">
-  <title>Parameters</title>
-  <para>
-    <literal>(Language | Xliff)  Diff</literal>
-  </para>
-  <itemizedlist>
-    <listitem>
-      <para>
-        <emphasis role="strong">Language</emphasis> (string) — ISO
-        language code,
-      </para>
-    </listitem>
-    <listitem>
-      <para>
-        <emphasis role="strong">Xliff</emphasis> (URI) — The URI of the
-        original
-        <ulink url="http://docs.oasis-open.org/xliff/v1.2/os/xliff-core.html">XLIFF</ulink>
-        file
-      </para>
-    </listitem>
-    <listitem>
-      <para>
-        <emphasis role="strong">Diff</emphasis> (URI) — The URI of the
-        differential
-        <ulink url="http://docs.oasis-open.org/xliff/v1.2/os/xliff-core.html">XLIFF</ulink>
-        file
-      </para>
-    </listitem>
-  </itemizedlist>
-</sect1>
-<sect1 id="input">
-  <title>Input</title>
-  <para>
-    An XML document. You must mark up the source document with:
-  </para>
-  <orderedlist numeration="arabic">
-    <listitem>
-      <para>
-        The <literal>xlf:id</literal> attributes which uniquely identify
-        each translation string.
-      </para>
-    </listitem>
-    <listitem>
-      <para>
-        Optionally, <ulink url="RDF-Translations">translation
-        metadata</ulink>, showing the location of the
-        <ulink url="http://docs.oasis-open.org/xliff/v1.2/os/xliff-core.html">XLIFF</ulink>
-        files which contain the translations of the document — this is
-        only required if you are not specifying the
-        <literal>Xliff</literal> parameter explicitly.
-      </para>
-    </listitem>
-  </orderedlist>
-</sect1>
-<sect1 id="output">
-  <title>Output</title>
-  <para>
-    An
-    <ulink url="http://docs.oasis-open.org/xliff/v1.2/os/xliff-core.html">XLIFF</ulink>
-    document.
-  </para>
-</sect1>
-<sect1 id="description">
-  <title>Description</title>
-  <para>
-    The stylesheet examines the source file for translatable elements.
-    (A translatable element is one which has an
-    <literal>xlf:id</literal> attribute and does not have the
-    <literal>its:translate=&quot;no&quot;</literal> attribute.)
-  </para>
-  <para>
-    For each translatable element, the stylesheet searches the
-    differential
-    <ulink url="http://docs.oasis-open.org/xliff/v1.2/os/xliff-core.html">XLIFF</ulink>
-    file for the translation unit with the same
-    <literal>xlf:id</literal>. If found, and if the target of the
-    translation unit has the attribute
-    <literal>status=&quot;translated&quot;</literal>, this translation
-    unit is copied to the output.
-  </para>
-  <para>
-    If the translation unit is not found in the differential
-    <ulink url="http://docs.oasis-open.org/xliff/v1.2/os/xliff-core.html">XLIFF</ulink>
-    file, the stylesheet looks for the specified original
-    <ulink url="http://docs.oasis-open.org/xliff/v1.2/os/xliff-core.html">XLIFF</ulink>
-    file, or if not specified, the
-    <ulink url="http://docs.oasis-open.org/xliff/v1.2/os/xliff-core.html">XLIFF</ulink>
-    file that corresponds to the specified output language, according to
-    the <ulink url="RDF-Translations">translation metadata</ulink>.
-  </para>
-  <para>
-    If the original
-    <ulink url="http://docs.oasis-open.org/xliff/v1.2/os/xliff-core.html">XLIFF</ulink>
-    file is found, the stylesheet searches for the translation unit with
-    the same <literal>xlf:id</literal>. If found, this translation unit
-    is copied to the output.
-  </para>
-  <para>
-    If the corresponding translation unit does not exist in the
-    differential
-    <ulink url="http://docs.oasis-open.org/xliff/v1.2/os/xliff-core.html">XLIFF</ulink>
-    file or the original
-    <ulink url="http://docs.oasis-open.org/xliff/v1.2/os/xliff-core.html">XLIFF</ulink>
-    file, there is no output.
-  </para>
-  <para>
-    If the original
-    <ulink url="http://docs.oasis-open.org/xliff/v1.2/os/xliff-core.html">XLIFF</ulink>
-    file is not found, there is no output.
-  </para>
-  <sect2 id="note">
-    <title>Note</title>
-    <para>
-      In the output file, all <literal>&lt;trans-unit&gt;</literal>
-      elements are contained in a single, flat
-      <literal>&lt;file&gt;</literal> element. Any multiple
-      <literal>&lt;file&gt;</literal> or
-      <literal>&lt;group&gt;</literal> elements from the original or
-      differential
-      <ulink url="http://docs.oasis-open.org/xliff/v1.2/os/xliff-core.html">XLIFF</ulink>
-      files are not copied to the output file.
-    </para>
-  </sect2>
-</sect1>
+		<refsect1>
+			<title>Input</title>
+			<para>An XML document. You must mark up the source document with:</para>
+			<orderedlist numeration="arabic">
+				<listitem>
+					<para>The <tag class="attribute">xlf:id</tag> attributes which uniquely identify each translation string.</para>
+				</listitem>
+				<listitem>
+					<para>Optionally, <link xl:href="#RDF-Translations">translation metadata</link>, showing the location of the <link xl:href="http://docs.oasis-open.org/xliff/v1.2/os/xliff-core.html">XLIFF</link> files which contain the translations of the document — this is only required if you are not specifying the <parameter>Xliff</parameter> parameter explicitly.</para>
+				</listitem>
+			</orderedlist>
+		</refsect1>
+		<refsect1>
+			<title>Output</title>
+			<para>An <link xl:href="http://docs.oasis-open.org/xliff/v1.2/os/xliff-core.html">XLIFF</link> document.</para>
+		</refsect1>
+		<refsect1>
+			<title>Description</title>
+			<para>The stylesheet examines the source file for translatable elements. (A translatable element is one which has an <tag class="attribute">xlf:id</tag> attribute and does not have the <tag class="attribute">its:translate='no'</tag> attribute.)</para>
+			<para>For each translatable element, the stylesheet searches the differential <link xl:href="http://docs.oasis-open.org/xliff/v1.2/os/xliff-core.html">XLIFF</link> file for the translation unit with the same <tag class="attribute">xlf:id</tag>. If found, and if the target of the translation unit has the attribute <tag class="attribute">status='translated'</tag>, this translation unit is copied to the output.</para>
+			<para>If the translation unit is not found in the differential <link xl:href="http://docs.oasis-open.org/xliff/v1.2/os/xliff-core.html">XLIFF</link> file, the stylesheet looks for the specified original <link xl:href="http://docs.oasis-open.org/xliff/v1.2/os/xliff-core.html">XLIFF</link> file, or if not specified, the <link xl:href="http://docs.oasis-open.org/xliff/v1.2/os/xliff-core.html">XLIFF</link> file that corresponds to the specified output language, according to the <link xl:href="#RDF-Translations">translation metadata</link>.</para>
+			<para>If the original <link xl:href="http://docs.oasis-open.org/xliff/v1.2/os/xliff-core.html">XLIFF</link> file is found, the stylesheet searches for the translation unit with the same <tag class="attribute">xlf:id</tag>. If found, this translation unit is copied to the output.</para>
+			<para>If the corresponding translation unit does not exist in the differential <link xl:href="http://docs.oasis-open.org/xliff/v1.2/os/xliff-core.html">XLIFF</link> file or the original <link xl:href="http://docs.oasis-open.org/xliff/v1.2/os/xliff-core.html">XLIFF</link> file, there is no output.</para>
+			<para>If the original <link xl:href="http://docs.oasis-open.org/xliff/v1.2/os/xliff-core.html">XLIFF</link> file is not found, there is no output.</para>
+			<refsect2>
+				<title>Note</title>
+				<para>In the output file, all <tag class="element">trans-unit</tag> elements are contained in a single, flat <tag class="element">file</tag> element. Any multiple <tag class="element">file</tag> or <tag class="element">group</tag> elements from the original or differential <link xl:href="http://docs.oasis-open.org/xliff/v1.2/os/xliff-core.html">XLIFF</link> files are not copied to the output file.</para>
+			</refsect2>
+		</refsect1>
 	</refentry>
 </article>
