--- a/doc/src/Xliff2CSV.xsl.docbook
+++ b/doc/src/Xliff2CSV.xsl.docbook
@@ -10,87 +10,47 @@
          version="5.0-variant PACBook"
          its:version="2.0"
          xml:lang="en-GB"
-         xml:id="ID">
-	<title>DocTools</title>
+         xml:id="pacbook.xliff.export">
+	<title>Xliff2CSV</title>
 	<refentry>
+		<refmeta>
+			<refentrytitle>Xliff2CSV</refentrytitle>
+		</refmeta>
 		<refnamediv>
-			<refname></refname>
-			<refpurpose></refpurpose>
+			<refname>Xliff2CSV.xsl</refname>
+			<refpurpose>Exports an <link xl:href="http://docs.oasis-open.org/xliff/v1.2/os/xliff-core.html">XLIFF</link> file to a tab or comma delimited text file.</refpurpose>
 		</refnamediv>
 		<refsynopsisdiv>
-			<synopsis></synopsis>
+			<title>Parameters</title>
+			<synopsis>[EOL] [Separator] [Delimiter] [Header]</synopsis>
+			<itemizedlist>
+				<listitem>
+					<para><parameter>EOL</parameter> (String) — The line ending characters. Default carriage return + line feed.</para>
+				</listitem>
+				<listitem>
+					<para><parameter>Separator</parameter> (String) — The character between fields. Default tab.</para>
+				</listitem>
+				<listitem>
+					<para><parameter>Delimiter</parameter> (String) — Character surrounding fields. Default single quote.</para>
+				</listitem>
+				<listitem>
+					<para><parameter>Header</parameter> (Boolean) — Whether or not the first row is a header row. Default false.</para>
+				</listitem>
+			</itemizedlist>
 		</refsynopsisdiv>
-<para>
-  Exports an
-  <ulink url="http://docs.oasis-open.org/xliff/v1.2/os/xliff-core.html">XLIFF</ulink>
-  file to a tab or comma delimited text file.
-</para>
-<sect1 id="parameters">
-  <title>Parameters</title>
-  <para>
-    <literal>[EOL] [Separator] [Delimiter] [Header]</literal>
-  </para>
-  <itemizedlist>
-    <listitem>
-      <para>
-        <emphasis role="strong">EOL</emphasis> (String) — The line
-        ending characters. Default carriage return + line feed.
-      </para>
-    </listitem>
-    <listitem>
-      <para>
-        <emphasis role="strong">Separator</emphasis> (String) — The
-        character between fields. Default tab.
-      </para>
-    </listitem>
-    <listitem>
-      <para>
-        <emphasis role="strong">Delimiter</emphasis> (String) —
-        Character surrounding fields. Default single quote.
-      </para>
-    </listitem>
-    <listitem>
-      <para>
-        <emphasis role="strong">Header</emphasis> (Boolean) — Whether or
-        not the first row is a header row. Default false.
-      </para>
-    </listitem>
-  </itemizedlist>
-</sect1>
-<sect1 id="input">
-  <title>Input</title>
-  <para>
-    An
-    <ulink url="http://docs.oasis-open.org/xliff/v1.2/os/xliff-core.html">XLIFF</ulink>
-    document.
-  </para>
-</sect1>
-<sect1 id="output">
-  <title>Output</title>
-  <para>
-    A tab or comma delimited text file.
-  </para>
-</sect1>
-<sect1 id="description">
-  <title>Description</title>
-  <para>
-    The stylesheet exports the content of an
-    <ulink url="http://docs.oasis-open.org/xliff/v1.2/os/xliff-core.html">XLIFF</ulink>
-    file as a UTF-8 encoded, tab or comma delimited text file. This can
-    be imported into a spreadsheet.
-  </para>
-  <para>
-    The first column contains the translation unit ID, second column the
-    <literal>resname</literal> attribute, third column the source text,
-    fourth column the target text and fifth column notes, if any.
-  </para>
-  <para>
-    If the <literal>Header</literal> parameter is set to true, i.e.
-    anything other than 0 or the empty string, the first row of the
-    exported text file is a header row containing the text
-    <literal>ID</literal>, source language code, target language code,
-    <literal>Notes</literal>.
-  </para>
-</sect1>
+		<refsect1>
+			<title>Input</title>
+			<para>An <link xl:href="http://docs.oasis-open.org/xliff/v1.2/os/xliff-core.html">XLIFF</link> document.</para>
+		</refsect1>
+		<refsect1>
+			<title>Output</title>
+			<para>A tab or comma delimited text file.</para>
+		</refsect1>
+		<refsect1>
+			<title>Description</title>
+			<para>The stylesheet exports the content of an <link xl:href="http://docs.oasis-open.org/xliff/v1.2/os/xliff-core.html">XLIFF</link> file as a UTF-8 encoded, tab or comma delimited text file. This can be imported into a spreadsheet.</para>
+			<para>The first column contains the translation unit ID, second column the <tag class="attribute">resname</tag> attribute, third column the source text, fourth column the target text and fifth column notes, if any.</para>
+			<para>If the <parameter>Header</parameter> parameter is set to true, i.e. anything other than 0 or the empty string, the first row of the exported text file is a header row containing the text <quote>ID</quote>, source language code, target language code, <quote>Notes</quote>.</para>
+		</refsect1>
 	</refentry>
 </article>
