--- a/doc/src/XliffDupe.xsl.docbook
+++ b/doc/src/XliffDupe.xsl.docbook
@@ -10,50 +10,31 @@
          version="5.0-variant PACBook"
          its:version="2.0"
          xml:lang="en-GB"
-         xml:id="ID">
-	<title>DocTools</title>
+         xml:id="pacbook.xliff.dupe">
+	<title>XliffDupe</title>
 	<refentry>
+		<refmeta>
+			<refentrytitle>XliffDupe</refentrytitle>
+		</refmeta>
 		<refnamediv>
-			<refname></refname>
-			<refpurpose></refpurpose>
+			<refname>XliffDupe.xsl</refname>
+			<refpurpose>Purges duplicate translation units from an <link xl:href="http://docs.oasis-open.org/xliff/v1.2/os/xliff-core.html">XLIFF</link> file.</refpurpose>
 		</refnamediv>
 		<refsynopsisdiv>
-			<synopsis></synopsis>
+			<title>Parameters</title>
+			<para>None.</para>
 		</refsynopsisdiv>
-<para>
-  Purges duplicate translation units from an
-  <ulink url="http://docs.oasis-open.org/xliff/v1.2/os/xliff-core.html">XLIFF</ulink>
-  file.
-</para>
-<sect1 id="parameters">
-  <title>Parameters</title>
-  <para>
-    None.
-  </para>
-</sect1>
-<sect1 id="input">
-  <title>Input</title>
-  <para>
-    An
-    <ulink url="http://docs.oasis-open.org/xliff/v1.2/os/xliff-core.html">XLIFF</ulink>
-    document.
-  </para>
-</sect1>
-<sect1 id="output">
-  <title>Output</title>
-  <para>
-    An
-    <ulink url="http://docs.oasis-open.org/xliff/v1.2/os/xliff-core.html">XLIFF</ulink>
-    document.
-  </para>
-</sect1>
-<sect1 id="description">
-  <title>Description</title>
-  <para>
-    This is a deterministic deduplication; the stylesheet checks for
-    translation units with duplicate IDs, keeps the first and discards
-    any others.
-  </para>
-</sect1>
+		<refsect1>
+			<title>Input</title>
+			<para>An <link xl:href="http://docs.oasis-open.org/xliff/v1.2/os/xliff-core.html">XLIFF</link> document.</para>
+		</refsect1>
+		<refsect1>
+			<title>Output</title>
+			<para>An <link xl:href="http://docs.oasis-open.org/xliff/v1.2/os/xliff-core.html">XLIFF</link> document.</para>
+		</refsect1>
+		<refsect1>
+			<title>Description</title>
+			<para>This is a deterministic deduplication; the stylesheet checks for translation units with duplicate IDs, keeps the first and discards any others.</para>
+		</refsect1>
 	</refentry>
 </article>
