--- a/doc/src/XliffPurge.xsl.docbook
+++ b/doc/src/XliffPurge.xsl.docbook
@@ -10,62 +10,32 @@
          version="5.0-variant PACBook"
          its:version="2.0"
          xml:lang="en-GB"
-         xml:id="ID">
-	<title>DocTools</title>
+         xml:id="pacbook.xliff.purge">
+	<title>XliffPurge</title>
 	<refentry>
+		<refmeta>
+			<refentrytitle>XliffPurge</refentrytitle>
+		</refmeta>
 		<refnamediv>
-			<refname></refname>
-			<refpurpose></refpurpose>
+			<refname>XliffPurge.xsl</refname>
+			<refpurpose>Purges completed translation units from an <link xl:href="http://docs.oasis-open.org/xliff/v1.2/os/xliff-core.html">XLIFF</link> file.</refpurpose>
 		</refnamediv>
 		<refsynopsisdiv>
-			<synopsis></synopsis>
+			<title>Parameters</title>
+			<para>None.</para>
 		</refsynopsisdiv>
-<para>
-  Purges completed translation units from an
-  <ulink url="http://docs.oasis-open.org/xliff/v1.2/os/xliff-core.html">XLIFF</ulink>
-  file.
-</para>
-<sect1 id="parameters">
-  <title>Parameters</title>
-  <para>
-    None.
-  </para>
-</sect1>
-<sect1 id="input">
-  <title>Input</title>
-  <para>
-    An
-    <ulink url="http://docs.oasis-open.org/xliff/v1.2/os/xliff-core.html">XLIFF</ulink>
-    document.
-  </para>
-</sect1>
-<sect1 id="output">
-  <title>Output</title>
-  <para>
-    An
-    <ulink url="http://docs.oasis-open.org/xliff/v1.2/os/xliff-core.html">XLIFF</ulink>
-    document.
-  </para>
-</sect1>
-<sect1 id="description">
-  <title>Description</title>
-  <para>
-    The stylesheet copies the structure and content of the input
-    document to the output document. If any translation units have a
-    target with the attribute
-    <literal>state=&quot;translated&quot;</literal>, they are not copied
-    to the output document.
-  </para>
-  <para>
-    This stylesheet may be useful if you have partially translated a
-    differential
-    <ulink url="http://docs.oasis-open.org/xliff/v1.2/os/xliff-core.html">XLIFF</ulink>
-    file, and have just run
-    <ulink url="XlateMerge.xsl">XlateMerge.xsl</ulink> to merge the
-    completed translation units back into the main
-    <ulink url="http://docs.oasis-open.org/xliff/v1.2/os/xliff-core.html">XLIFF</ulink>
-    file.
-  </para>
-</sect1>
+		<refsect1>
+			<title>Input</title>
+			<para>An <link xl:href="http://docs.oasis-open.org/xliff/v1.2/os/xliff-core.html">XLIFF</link> document.</para>
+		</refsect1>
+		<refsect1>
+			<title>Output</title>
+			<para>An <link xl:href="http://docs.oasis-open.org/xliff/v1.2/os/xliff-core.html">XLIFF</link> document.</para>
+		</refsect1>
+		<refsect1>
+			<title>Description</title>
+			<para>The stylesheet copies the structure and content of the input document to the output document. If any translation units have a target with the attribute <tag class="attribute">state='translated'</tag>, they are not copied to the output document.</para>
+			<para>This stylesheet may be useful if you have partially translated a differential <link xl:href="http://docs.oasis-open.org/xliff/v1.2/os/xliff-core.html">XLIFF</link> file, and have just run <link xl:href="#XlateMerge.xsl">XlateMerge.xsl</link> to merge the completed translation units back into the main <link xl:href="http://docs.oasis-open.org/xliff/v1.2/os/xliff-core.html">XLIFF</link> file.</para>
+		</refsect1>
 	</refentry>
 </article>
